[gd_scene load_steps=14 format=3 uid="uid://dko8nvuul1ssj"]

[ext_resource type="Script" path="res://game16.gd" id="1_qwtvp"]
[ext_resource type="FontFile" uid="uid://6e5a2u5rsc3p" path="res://m5x7.ttf" id="2_yfale"]
[ext_resource type="Texture2D" uid="uid://cekwao8wrdi76" path="res://Buttons/Home_Button.png" id="3_m56ws"]
[ext_resource type="PackedScene" uid="uid://dre8skr3kywrn" path="res://Cards/Blue_house.tscn" id="4_1heqj"]
[ext_resource type="PackedScene" uid="uid://xtff0xk6g05w" path="res://Cards/Green_sheet.tscn" id="5_kt3tv"]
[ext_resource type="PackedScene" uid="uid://ce2kcmxcjrq2l" path="res://Cards/Red_rhomb.tscn" id="6_da8bc"]
[ext_resource type="PackedScene" uid="uid://d2jbwblqvgn46" path="res://Cards/Yellow_sun.tscn" id="7_6lier"]
[ext_resource type="PackedScene" uid="uid://bgq6xwdbkwo4l" path="res://Cards/Yellow_round.tscn" id="8_07hrs"]
[ext_resource type="PackedScene" uid="uid://xwlfdylutt6d" path="res://Cards/Violet_sun.tscn" id="9_ma4xi"]
[ext_resource type="PackedScene" uid="uid://dekcamg30unkm" path="res://Cards/Orange_spiral.tscn" id="10_82v6y"]
[ext_resource type="PackedScene" uid="uid://dxayumkpfowor" path="res://Cards/Blue_stars.tscn" id="11_yrjng"]

[sub_resource type="LabelSettings" id="LabelSettings_vmvdx"]
font = ExtResource("2_yfale")
font_size = 200

[sub_resource type="LabelSettings" id="LabelSettings_418my"]
font = ExtResource("2_yfale")
font_size = 200

[node name="game16" type="Node2D"]
script = ExtResource("1_qwtvp")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(1, 0.67451, 1, 1)

[node name="Score_label" type="Label" parent="."]
offset_left = 1259.0
offset_top = 111.0
offset_right = 1870.0
offset_bottom = 317.0
text = "score:"
label_settings = SubResource("LabelSettings_vmvdx")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Home_Button" type="Button" parent="."]
offset_left = 1656.0
offset_top = 816.0
offset_right = 1920.0
offset_bottom = 1080.0
icon = ExtResource("3_m56ws")

[node name="Card" parent="." instance=ExtResource("4_1heqj")]
position = Vector2(-539, 311)

[node name="Card2" parent="." instance=ExtResource("4_1heqj")]
position = Vector2(-830, 310)

[node name="Card3" parent="." instance=ExtResource("5_kt3tv")]
position = Vector2(-833, 768)

[node name="Card4" parent="." instance=ExtResource("5_kt3tv")]
position = Vector2(-549, 762)

[node name="Card5" parent="." instance=ExtResource("6_da8bc")]
position = Vector2(-1135, 311)

[node name="Card6" parent="." instance=ExtResource("6_da8bc")]
position = Vector2(-232, 310)

[node name="Card7" parent="." instance=ExtResource("7_6lier")]
position = Vector2(-1123, 770)

[node name="Card8" parent="." instance=ExtResource("7_6lier")]
position = Vector2(-232, 760)

[node name="Card9" parent="." instance=ExtResource("8_07hrs")]
position = Vector2(-1425, 318)

[node name="Card10" parent="." instance=ExtResource("8_07hrs")]
position = Vector2(-1435, 765)

[node name="Card11" parent="." instance=ExtResource("9_ma4xi")]
position = Vector2(-1720, 770)

[node name="Card12" parent="." instance=ExtResource("9_ma4xi")]
position = Vector2(-1710, 318)

[node name="Card13" parent="." instance=ExtResource("10_82v6y")]
position = Vector2(-2029, 774)

[node name="Card14" parent="." instance=ExtResource("10_82v6y")]
position = Vector2(-2015, 299)

[node name="Card15" parent="." instance=ExtResource("11_yrjng")]
position = Vector2(-2334, 774)

[node name="Card16" parent="." instance=ExtResource("11_yrjng")]
position = Vector2(-2315, 308)

[node name="Won_label" type="Label" parent="."]
visible = false
offset_left = 1261.0
offset_top = 492.0
offset_right = 1872.0
offset_bottom = 698.0
text = "You won!"
label_settings = SubResource("LabelSettings_418my")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="Home_Button" to="." method="_on_home_button_pressed"]
[connection signal="open" from="Card" to="." method="_on_card_open"]
[connection signal="open" from="Card2" to="." method="_on_card_2_open"]
[connection signal="open" from="Card3" to="." method="_on_card_3_open"]
[connection signal="open" from="Card4" to="." method="_on_card_4_open"]
[connection signal="open" from="Card5" to="." method="_on_card_5_open"]
[connection signal="open" from="Card6" to="." method="_on_card_6_open"]
[connection signal="open" from="Card7" to="." method="_on_card_7_open"]
[connection signal="open" from="Card8" to="." method="_on_card_8_open"]
[connection signal="open" from="Card9" to="." method="_on_card_9_open"]
[connection signal="open" from="Card10" to="." method="_on_card_10_open"]
[connection signal="open" from="Card11" to="." method="_on_card_11_open"]
[connection signal="open" from="Card12" to="." method="_on_card_12_open"]
[connection signal="open" from="Card13" to="." method="_on_card_13_open"]
[connection signal="open" from="Card14" to="." method="_on_card_14_open"]
[connection signal="open" from="Card15" to="." method="_on_card_15_open"]
[connection signal="open" from="Card16" to="." method="_on_card_16_open"]
